--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
 <img src = "davidFace.jpg"  style = 'float:left; margin-right :100px width: 200; height: 200'>
-  <title>David Belanger's Homepage</title>
+  <title>David Belanger's Research Homepage</title>
   </head>
 
 <!-- <p>I recently graduated from UMass Amherst, where I was advised by Professor <a href = "http://www.cs.umass.edu/~mccallum/">Andrew McCallum</a>.  Starting in July 2017, I will be a research scientist on the <a href="https://research.google.com/teams/brain/">Google Brain Team</a>. Before that, I worked on multilingual optical handwriting recognition at <a href = "http://www.bbn.com/technology/speech/">Raytheon BBN Technologies</a> and earthquake modeling at Harvard. In graduate school, my research spanned graphical models, structured prediction, and deep learning. I have interned with <a href = "https://homes.cs.washington.edu/~sham/">Sham Kakade</a>  at Microsoft Research and <a href = "https://dilipkay.wordpress.com/">Dilip Krishnan</a> at Google. I co-organized the weekly UMass <a href="http://people.cs.umass.edu/~mlfriend/"> Machine Learning and Friends Lunch</a> for 5 years.  </p>
