--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <br>
 
-  <h3>Publications</h3>
+  <h3>Research Publications</h3>
 
 Wei, J., Belanger, D., Adams, R. P., Sculley, D.. "Predicting Electron-Ionization Mass Spectrometry using Neural Networks." Preprint.  <a href="http://arxiv.org/abs/1811.08545">pdf</a> <a href="https://github.com/brain-research/deep-molecular-massspec">code</a>
 <br><br>
