--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 
   <h3>Research Publications</h3>
 
-Wei, J., Belanger, D., Adams, R. P., Sculley, D.. "Predicting Electron-Ionization Mass Spectrometry using Neural Networks." Preprint.  <a href="http://arxiv.org/abs/1811.08545">pdf</a> <a href="https://github.com/brain-research/deep-molecular-massspec">code</a>
+Bileschi, M., Belanger, D., Bryant, D., Sanderson, T., Carter, B., Sculley, D., DePristo, M. A., Colwell, L.. "Using Deep Learning to Annotate the Protein Universe." Preprint. <a href="https://doi.org/10.1101/626507">pdf</a>
+<br><br>
+  
+Carter, B., Bileschi, M., Smith, J., Sanderson, T. Bryant, D., Belanger, D., Colwell, L.. "Critiquing Protein Family Classification Models Using Sufficient Input Subsets." Preprint. <a href="https://doi.org/10.1101/674119">pdf</a>
+<br><br>
+  
+Wei, J., Belanger, D., Adams, R. P., Sculley, D.. "Predicting Electron-Ionization Mass Spectrometry using Neural Networks." ACS Central Science 2019, 5, 4 700-708.  <a href="https://pubs.acs.org/doi/10.1021/acscentsci.9b00085">pdf</a> <a href="https://github.com/brain-research/deep-molecular-massspec">code</a>
 <br><br>
 
 Mena, G., Belanger, D., Linderman, S., Snoek, J.. "Learning Latent Permutations with Gumbel-Sinkhorn Networks." ICLR 2018.  <a href="https://openreview.net/pdf?id=Byt3oJ-0W">pdf</a>
