--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ Carter, B., Bileschi, M., Smith, J., Sanderson, T. Bryant, D., Belanger, D., Col
 Teterwak, P., Sarna, A., Krishnan, D., Maschinot, A., Belanger, D., Liu, C., Freeman, W. T.. "Boundless: Generative Adversarial Networks for Image Extension." ICCV 2019. <a href="https://arxiv.org/pdf/1908.07007.pdf">pdf</a>
 <br><br>
 
+Wei, J., Belanger, D., Adams, R. P., Sculley, D.. "Predicting Electron-Ionization Mass Spectrometry using Neural Networks." ACS Central Science 2019, 5, 4 700-708.  <a href="https://pubs.acs.org/doi/10.1021/acscentsci.9b00085">pdf</a> <a href="https://github.com/brain-research/deep-molecular-massspec">code</a>
+<br><br>
+
 Mena, G., Belanger, D., Linderman, S., Snoek, J.. "Learning Latent Permutations with Gumbel-Sinkhorn Networks." ICLR 2018.  <a href="https://openreview.net/pdf?id=Byt3oJ-0W">pdf</a>
 <br><br>
 
