--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
 Bileschi, M., Belanger, D., Bryant, D., Sanderson, T., Carter, B., Sculley, D., DePristo, M. A., Colwell, L.. "Using Deep Learning to Annotate the Protein Universe." Preprint. <a href="https://doi.org/10.1101/626507">pdf</a>
 <br><br>
+ 
+Angermueller, C. Belanger, D., Gane, A., Mariet, Z., Dohan, D., Murphy, K., Colwell, L. Sculley, D.. "Population-Based Black-Box Optimization for Biological Sequence Design." ICML 2020.
+<br><br>
+ 
+Angermueller, C., Dohan, D., Belanger, Deshpande, R., Murphy, K., Colwell, L.. "Model-Based Reinforcement Learning for Biological Sequence Design." ICLR 2020.
+<br><br>
   
 Carter, B., Bileschi, M., Smith, J., Sanderson, T. Bryant, D., Belanger, D., Colwell, L.. "Critiquing Protein Family Classification Models Using Sufficient Input Subsets." Preprint. <a href="https://doi.org/10.1101/674119">pdf</a>
 <br><br>
