--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 
   <h3>Research Publications</h3>
 
-Bileschi, M., Belanger, D., Bryant, D., Sanderson, T., Carter, B., Sculley, D., DePristo, M. A., Colwell, L.. "Using Deep Learning to Annotate the Protein Universe." Preprint. <a href="https://doi.org/10.1101/626507">pdf</a>
+Papalexopoulos, T., Tjandraatmadja, C., Anderson, R., Vielma, J.P., Belanger, D.. "Constrained Discrete Black-Box Optimization using Mixed-Integer Programming." ICML 2022. <a href="https://arxiv.org/abs/2110.09569">pdf</a>
+<br><br>
+
+Chao, S., Belanger, D., "Generalizing Few-Shot Classification of Whole-Genome Doubling Across Cancer Types." Pacific Sympsium On Biocomputing 2022. <a href="https://pubmed.ncbi.nlm.nih.gov/34890144/">pdf</a>
+<br><br> 
+ 
+Sanderson, T., Bileschi, M., Belanger, D., Colwell, L.. "ProteInfer: Deep Networks for Protein Functional Inference." Interactive preprint. <a href="https://google-research.github.io/proteinfer/">site</a>
+<br><br>
+ 
+Bileschi, M., Belanger, D., Bryant, D., , Carter, B., Sculley, D., DePristo, M. A., Colwell, L.. "Using Deep Learning to Annotate the Protein Universe." Nature Biotechnology. Feb 2022. <a href="https://www.nature.com/articles/s41587-021-01179-w">pdf</a>
 <br><br>
   
 Angermueller, C. Belanger, D., Gane, A., Mariet, Z., Dohan, D., Murphy, K., Colwell, L. Sculley, D.. "Population-Based Black-Box Optimization for Biological Sequence Design." ICML 2020. <a href="https://arxiv.org/abs/2006.03227">pdf</a>
