--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Shaw, P., Gurram, B., Belanger, D., Gane, A., Bileschi, M.L., Colwell, L.J., Tou
 
  <br><br>
  
-Thomas, N., Belanger, D., Xu, C., Lee, H., Hirano, K., Iwai, K., Polic, V., Nyberg, K. D., Hoff, K., Frenz, L., Emrich, C. A., Kim, J. W., Chavarha, M., Ramanan, A., Agresti, J. J., Colwell, L. J. "Engineering highly active and diverse nuclease enzymes by combining machine learning and ultra-high-throughput screening." bioRxiv, 2024. <a href="https://www.biorxiv.org/content/10.1101/2024.03.21.585615v6">link</a>
+Thomas, N. (*), Belanger, D. (*), Xu, C., Lee, H., Hirano, K., Iwai, K., Polic, V., Nyberg, K. D., Hoff, K., Frenz, L., Emrich, C. A., Kim, J. W., Chavarha, M., Ramanan, A., Agresti, J. J., Colwell, L. J. "Engineering highly active and diverse nuclease enzymes by combining machine learning and ultra-high-throughput screening." bioRxiv, 2024. <a href="https://www.biorxiv.org/content/10.1101/2024.03.21.585615v6">link</a>
 
 <br><br>
 
