--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 -->
 <br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br>
-<p> I am a research scientist at Google Deepmind using machine learning to improve our understanding of natural proteins and to engineer novel proteins. I graduated from UMass Amherst, where I was advised by Professor <a href = "http://www.cs.umass.edu/~mccallum/">Andrew McCallum</a> and my work spanned graphical models, structured prediction, natural language processing, and deep learning. I am interested in a wide range of machine learning methods and applications. Reach out to me if you want to chat! </p>
+<p> I am a research scientist at Google Deepmind using machine learning to improve our understanding of natural proteins and to engineer novel proteins. In grad school at UMass Amherst, I was advised by Professor <a href = "http://www.cs.umass.edu/~mccallum/">Andrew McCallum</a> and my work spanned graphical models, structured prediction, natural language processing, and deep learning. I am interested in a wide range of machine learning methods and applications. Reach out to me if you want to chat! </p>
 
 <!--<h3><a href="http://www.cs.umass.edu/~belanger/belanger-CV.pdf"> CV</a>   </h2> 
 
@@ -19,13 +19,14 @@
 
   <h3>Research Publications</h3>
 
+Thomas, N. (*), Belanger, D. (*), Xu, C., Lee, H., Hirano, K., Iwai, K., Polic, V., Nyberg, K. D., Hoff, K., Frenz, L., Emrich, C. A., Kim, J. W., Chavarha, M., Ramanan, A., Agresti, J. J., Colwell, L. J. "Engineering highly active and diverse nuclease enzymes by combining machine learning and ultra-high-throughput screening." Cell Systems, 2025. <a href="https://www.cell.com/cell-systems/fulltext/S2405-4712(25)00069-9">link</a>
+
+<br><br>
+ 
 Shaw, P., Gurram, B., Belanger, D., Gane, A., Bileschi, M.L., Colwell, L.J., Toutanova, K., Parikh, A. "ProtEx: A Retrieval-Augmented Approach for Protein Function Prediction." Biorxiv, 2024. <a href="https://www.biorxiv.org/content/10.1101/2024.05.30.596539v1">link</a>
 
  <br><br>
  
-Thomas, N. (*), Belanger, D. (*), Xu, C., Lee, H., Hirano, K., Iwai, K., Polic, V., Nyberg, K. D., Hoff, K., Frenz, L., Emrich, C. A., Kim, J. W., Chavarha, M., Ramanan, A., Agresti, J. J., Colwell, L. J. "Engineering highly active and diverse nuclease enzymes by combining machine learning and ultra-high-throughput screening." bioRxiv, 2024. <a href="https://www.biorxiv.org/content/10.1101/2024.03.21.585615v6">link</a>
-
-<br><br>
 
 Sanderson, T., Bileschi, M.L., Belanger, D., Colwell, L.J.  "ProteInfer, deep neural networks for protein functional inference." Elife, 2023. <a href="https://elifesciences.org/articles/80942.pdf">link</a>
 <br><br>
