--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 -->
 <br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br>
-<p> I am a research scientist at Google Deepmind using machine learning to improve our understanding of natural proteins and to engineer novel proteins. In grad school at UMass Amherst, I was advised by Professor <a href = "http://www.cs.umass.edu/~mccallum/">Andrew McCallum</a> and my work spanned graphical models, structured prediction, natural language processing, and deep learning. I am interested in a wide range of machine learning methods and applications. Reach out to me if you want to chat! </p>
+<p> I am a research scientist at Google Deepmind using machine learning to improve our understanding of natural proteins and to engineer novel proteins. In grad school, I was advised by <a href = "http://www.cs.umass.edu/~mccallum/">Andrew McCallum</a> and my work spanned graphical models, structured prediction, natural language processing, and deep learning. I am interested in a wide range of machine learning methods and applications. Reach out to me if you want to chat! </p>
 
 <!--<h3><a href="http://www.cs.umass.edu/~belanger/belanger-CV.pdf"> CV</a>   </h2> 
 
