Add link to nuclease design talk

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <h3>Research Publications</h3>
 
-Thomas, N. (*), Belanger, D. (*), Xu, C., Lee, H., Hirano, K., Iwai, K., Polic, V., Nyberg, K. D., Hoff, K., Frenz, L., Emrich, C. A., Kim, J. W., Chavarha, M., Ramanan, A., Agresti, J. J., Colwell, L. J. "Engineering highly active and diverse nuclease enzymes by combining machine learning and ultra-high-throughput screening." Cell Systems, 2025. <a href="https://www.cell.com/cell-systems/fulltext/S2405-4712(25)00069-9">link</a>
+Thomas, N. (*), Belanger, D. (*), Xu, C., Lee, H., Hirano, K., Iwai, K., Polic, V., Nyberg, K. D., Hoff, K., Frenz, L., Emrich, C. A., Kim, J. W., Chavarha, M., Ramanan, A., Agresti, J. J., Colwell, L. J. "Engineering highly active and diverse nuclease enzymes by combining machine learning and ultra-high-throughput screening." Cell Systems, 2025. <a href="https://www.cell.com/cell-systems/fulltext/S2405-4712(25)00069-9">paper</a>  <a href="https://www.youtube.com/watch?si=gvwVbCkv8K6S0URI&v=eGNERw_nKQM">talk</a>  <a href="ML4Proteins - July 9 Nuclease Design Talk.pdf">talk_slides</a>
 
 <br><br>
  
